# tmux-cmc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  charter.md  deny.toml  justfile  lefthook.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  question.yml
.github/workflows/: audit.yml  ci.yml  dependency-review.yml  scorecards.yml
_kos/: kos.yaml
_kos/findings/: finding-001-crates-publish-readiness.yaml  finding-002-crates-publish-review.yaml  finding-003-ci-quality-gate-gap.yaml
_kos/ideas/: roadmap-v1.md  tmux-cmc-as-ecosystem-crate.md
_kos/nodes/bedrock/: elem-sync-architecture.yaml  elem-wire-protocol.yaml
_kos/nodes/frontier/: question-aclaude-dep-source.yaml  question-aclaude-pane-lifecycle.yaml  question-api-stability.yaml  question-async-feature.yaml  question-crates-publish.yaml  question-documentation.yaml  question-forestage-dep-source.yaml  question-forestage-pane-lifecycle.yaml  question-integration-tests.yaml  question-marvel-tmux-driver.yaml  question-notification-coverage.yaml  question-platform-matrix.yaml
_kos/probes/: brief-crates-publish-readiness.yaml  probe-consumer-tmux-strategy.yaml
docs/: control-mode-architecture.md
examples/: session_start.rs  status_push.rs
src/: client.rs  command.rs  connection.rs  error.rs  ids.rs  lib.rs  notification.rs  protocol.rs  queue.rs  reader.rs  response.rs  writer.rs
