[package]
name = "tmux-cmc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "tmux control mode client — bidirectional programmatic tmux control"
repository = "https://github.com/ArcavenAE/tmux-cmc"
homepage = "https://github.com/ArcavenAE/tmux-cmc"
documentation = "https://docs.rs/tmux-cmc"
readme = "README.md"
keywords = ["tmux", "control-mode", "terminal", "multiplexer", "automation"]
categories = ["command-line-interface", "api-bindings", "os::unix-apis"]
exclude = ["_kos/", "CLAUDE.md", "deny.toml", "justfile", "Justfile", "rust-toolchain.toml", ".claude/", "docs/"]

[dependencies]
thiserror = "2"
oneshot = "0.1"
rustix = { version = "1.1", features = ["pty", "termios"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin"]

[lints.clippy]
cloned_instead_of_copied = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
uninlined_format_args = "deny"

[lints.rust]
unsafe_code = "forbid"
